syntax = "proto3";

package protobuf;

import "two_phase_commit_messages.proto";

option java_package			= "protobuf.generated";
option java_outer_classname = "TwoPhaseCommitCoordinatorMessages";

service TwoPhaseCommitCoordinatorService
{
	rpc TwoPhaseCommit(TwoPhaseCommitRequest) returns (TwoPhaseCommitResponse);
}

message TwoPhaseCommitRequest
{
	optional RequestDetails details = 1;
}

message TwoPhaseCommitResponse
{
	optional bool committed = 1;
}